vitrail-sqlite-macros/tests/ui/fail/bigint_autoincrement.stderr
error: `@default(autoincrement())` is only supported on `Int` fields in SQLite
 --> tests/ui/fail/bigint_autoincrement.rs:9:24
  |
9 |         id BigInt @id @default(autoincrement())
  |                        ^^^^^^^
